--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,14 +1,32 @@
-pipeline{
+pipeline {
     agent any
 
-    stages{
+    stages {
+        stage ('Compile Stage') {
 
-    stage ('compile'){
-        steps{
-            withMaven(maven : 'maven'){
-            sh 'mvn clean compile'
+            steps {
+                withMaven(maven : 'maven') {
+                    sh 'mvn clean compile'
+                }
             }
         }
-    }
+
+        stage ('Testing Stage') {
+
+            steps {
+                withMaven(maven : 'maven') {
+                    sh 'mvn test'
+                }
+            }
+        }
+
+
+        stage ('Deployment Stage') {
+            steps {
+                withMaven(maven : 'maven') {
+                    sh 'mvn deploy'
+                }
+            }
+        }
     }
 }
